@@ -8,6 +8,8 @@ Version 1.3.7+svn:
    * 'village_gold' is no longer stored when 'use_map_settings' is used
    * the server sends the game id and not only the game name if a player joins
      a game to avoid ambiguity in case of multiple games with the same name
+ * WML engine:
+   * now tag [filter_adjacent] is supported in the Standard Unit Filter
  * graphics:
    * new graphics for the highwayman
  * miscellaneous and bug fixes
